--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -313,7 +313,7 @@ main h1 svg {
   grid-column: 1 / -1;
 }
 
-section:not(.overview) .form-check {
+section .overview .form-check {
   padding-left: 0;
 }
 
@@ -543,10 +543,11 @@ input ~ .font-danger {
 .common-region {
   display: grid;
   grid-template-columns: var(--grid-tc);
+  grid-auto-rows: auto;
   gap: var(--gap);
   row-gap: calc(var(--gap) + 1rem);
   column-gap: calc(var(--gap) + 3rem);
-  align-items: baseline;
+  align-items: baseline; // align items when some show info/error message
 
   padding: 3.2rem 2.4rem;
   border: 1px solid var(--border-color);
@@ -566,6 +567,9 @@ input ~ .font-danger {
    */
   &--three-cols {
     --grid-tc: repeat(auto-fit, minmax(34rem, 1fr));
+    // stretch all items to the same hight (always fill up grid rows completely)
+    align-items: unset;
+    grid-auto-rows: auto;
   }
 }
 
