--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -182,6 +182,45 @@ header .container-fluid {
     }
   }
 }
+
+// Language + Logout
+.actions form{
+  display: flex;
+  align-items: center;
+}
+.actions a {
+  color: #fff;
+
+  &:focus,
+  &:hover,
+  &:active {
+    color: var(--clr-accent);
+  }
+
+  // Do not display default array down
+  &::after {
+    display: none;
+  }
+}
+
+
+.language-select__locale {
+  text-transform: uppercase;
+  margin-left: 8px;
+  margin-right: 24px;
+}
+
+.user__account-menu__name {
+  margin-right: 8px;
+}
+
+.dropdown-menu span,
+.dropdown-menu i {
+  color: var(--clr-text-body);
+  font-size: var(--fs-400);
+}
+
+/* lower header => actions: help button */
 .actions__help {
   display: flex;
   align-items: center;
