Tooltips: Change font-size + placement

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -41,7 +41,7 @@
                                 data-toggle="tooltip"
                                 title="#{msgs.spracheAendern}"
                                 data-bs-toggle="tooltip"
-                                data-bs-placement="bottom">
+                                data-bs-placement="left">
 
                                 <a
                                     class="nav-link dropdown-toggle"
