--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -724,6 +724,117 @@ input ~ .font-danger {
   }
 }
 
+///////////
+// Status bar delivery Plugin
+//
+.statuslist {
+  --progress-step-width: 16px;
+  --progress-line-height: 2px;
+
+  position: relative;
+  margin: 0.8rem auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.statuslist {
+  li {
+    position: relative;
+    display: flex;
+    width: 10%;
+    justify-content: center;
+    overflow: initial !important;
+  }
+
+
+  // Steps
+  li::after {
+      position: absolute;
+      display: inline-block;
+      content: "";
+      height: var(--progress-line-height);
+      transform: translateY(-50%);
+      top: calc(var(--progress-step-width) / 2 + var(--progress-line-height) / 2);
+      left: calc(-100% + var(--progress-step-width) / 4);
+      width: 150%;
+      z-index: -1;
+      background-color: var(--clr-neutral-600);
+  }
+
+  li:first-child,
+  li:last-child,
+  li:nth-child(-n+2)::after,
+  li:last-child::after {
+    width: unset;
+  }
+
+  // Line connecting status steps
+  li::before {
+    display: inline-block;
+    position: absolute;
+    content: "";
+    width: var(--progress-step-width);
+    height: var(--progress-step-width);
+    border-radius: 32px;
+    background-color: var(--clr-neutral-600);
+  }
+
+  li:first-child::before,
+  li:last-child::before {
+    display: none;
+
+  }
+
+  // Step name
+  li span {
+    margin-top: 24px;
+    display: flex;
+    text-align: center;
+  }
+
+  // back + next btn
+  li button {
+    align-self: start;
+  }
+
+  // step color code status
+  li.active::before {
+    background-color: var(--clr-accent);
+  }
+
+  li.finished::before {
+    background-color: var(--clr-success);
+  }
+} // end .statuslist
+
+
+@media (max-width: 1000px) {
+  /* Make status bar larger than the container */
+  .submit {
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    height: 100px;
+    margin-top: 100px;
+    left: 50%;
+    padding: 0 16px;
+  }
+}
+
+@media (max-width: 640px) {
+  /* Don't show step name on small screens */
+  ul span {
+    display: none;
+  }
+}
+
+
+
+//////
+//
+//
 .form-actions:not(.form-actions--progress) {
   margin-left: auto;
 }
